src/objects/Apartment__c.object
<CustomObject>
    <fields>
        <fullName>Apartment_Status__c</fullName>
        <label>Apartment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under construction</fullName>
                </value>
                <value>
                    <fullName>Construction completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Apartments</relationshipLabel>
        <relationshipName>Apartments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_given__c</fullName>
        <label>Discount given</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_floors__c</fullName>
        <label>Number of floors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apartment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Apartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apartments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>